# gevo

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  analysis.py  compare.json  evaluate.py  evolve.py  fuzzycompare.cpp  irind.py  profile.json  pyproject.toml  setup.py  stage_analyze.py
.github/workflows/: github-action.yaml
benchmark/GPU-BSW/: CMakeLists.txt  Makefile  README.md  aa_kernel.cu  alignments.cpp  alignments.hpp  dna_kernel.cu  dna_profile.json  dna_set2.json  driver.cpp  driver.hpp  driver_ptx.cpp  evolve.sh  kernel.cpp  kernel.hpp  license.txt  main.cpp  utils.cpp  utils.hpp
benchmark/oxDNA/: CMakeLists.txt
benchmark/oxDNA/examples/CUDA_EXAMPLE/: Makefile  README.txt  all_cuda.ptx  evolve.sh  input  input_TEST  profile.json  run.sh
benchmark/oxDNA/examples/OXPY_REMD/: remd.py
benchmark/oxDNA/src/: CMakeLists.txt
benchmark/oxDNA/src/CUDA/: Makefile  all_cuda.cu  all_cuda.ptx  all_cuda_mod.cu  cuda_defs.h
benchmark/oxDNA/src/CUDA/Backends/: MD_CUDAMixedBackend_ptx.cu
benchmark/oxDNA/src/CUDA/Interactions/: CUDABaseInteraction.h  CUDADNAInteraction_ptx.cu
benchmark/oxDNA/src/Interactions/: DNA2Interaction.cpp
benchmark/rodinia_3.1/common/: make.config
benchmark/rodinia_3.1/cuda/: backprop
benchmark/rodinia_3.1/cuda/b+tree/: Makefile  main.c  profile.json
benchmark/rodinia_3.1/cuda/b+tree/kernel/: kernel_gpu_cuda.cu  kernel_gpu_cuda_wrapper.h  (+2 more)
benchmark/rodinia_3.1/cuda/bfs/: Makefile  bfs_ptx.cu  kernel.cu  profile.json  run
benchmark/rodinia_3.1/cuda/cfd/: Makefile  euler3d.cu  euler3d.cu.bak  euler3d_ptx.cu  profile.json  run
benchmark/rodinia_3.1/cuda/gaussian/: Makefile  evolve.sh  gaussian.cu  gaussian_ptx.cu  profile.json  run
benchmark/rodinia_3.1/cuda/heartwall/: Makefile  main_ptx.cu  profile.json  run  subdivide_list
benchmark/rodinia_3.1/cuda/hotspot/: Makefile  evolve.sh  hotspot_ptx.cu  profile.json  run
benchmark/rodinia_3.1/cuda/hotspot3D/: 3D.cu  Makefile  evolve.sh  opt1.cu  opt1_ptx.cu
benchmark/rodinia_3.1/cuda/nn/: .~lock.progress.pptx#  Makefile  nn_cuda.cu  nn_cuda_ptx.cu  profile.json  run
benchmark/rodinia_3.1/cuda/nw/: .~lock.progress.pptx#  Makefile  needle_ptx.cu  profile.json  run
benchmark/rodinia_3.1/cuda/particlefilter/: .Makefile_temp.swp  Makefile  ex_particle_CUDA_float_seq.cu  ex_particle_CUDA_float_seq_ptx.cu  ex_particle_CUDA_naive_seq.cu  profile.json  run
benchmark/rodinia_3.1/cuda/pathfinder/: Makefile  pathfinder.cu  pathfinder_ptx.cu  profile.json
benchmark/rodinia_3.1/cuda/srad_v2/: .profile.json.swp  Makefile  evolve.sh  profile.json  srad_kernel.cu  srad_ptx.cu
benchmark/rodinia_3.1/cuda/streamcluster/: .progress.swp  .~lock.progress.pptx#  Makefile  profile.json  run  streamcluster_cuda_cpu.cpp  streamcluster_cuda_ptx.cu  streamcluster_header.cu
benchmark/simcovGPU/: LICENSE.txt  README.md  evolve.sh  makefile  plot.py  profile_seed.json  run.sh
benchmark/simcovGPU/include/: options.hpp  tissue.hpp
benchmark/simcovGPU/src/: main.cpp  make_stencil.py  options.cpp  random_test.cu  tissue.cu  tissue_ptx.cu  tissue_ptx_md.cu
cuprof/: CMakeLists.txt  cuinj.cpp
fuzzycompare/: CMakeLists.txt  fuzzycompare.cpp
gevo/: __init__.py  evolve.py  irind.py
variancecalc/: CMakeLists.txt  Makefile  variancecalc.cpp
(+11 files in other folders)
